@@ -3,6 +3,7 @@
 	* utils/jquery.timers.js,
 	utils/player.html,
 	utils/player.js: Add alarm support.
+	* utils/player.js: Fix the bug of alarm.
 
 2010-01-08  Shih-Yuan Lee (FourDollars) <fourdollars@gmail.com>
 
